<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <version>3.1.1</version>
    <relativePath/>
  </parent>

  <groupId>org.avillar</groupId>
  <artifactId>gymtracker-backend</artifactId>
  <packaging>jar</packaging>
  <version>0.8.1-SNAPSHOT</version>
  <name>${project.groupId}:${project.artifactId}</name>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.version>3.11.0</maven.compiler.version>
    <org.postgresql.version>42.6.0</org.postgresql.version>
    <org.jjwt.version>0.11.5</org.jjwt.version>
    <org.lombok.version>1.18.28</org.lombok.version>
    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
    <org.commons-lang3.version>3.12.0</org.commons-lang3.version>
    <org.springdoc.version>2.1.0</org.springdoc.version>
    <org.springframework.security.version>6.1.1</org.springframework.security.version>
    <org.json.version>20230618</org.json.version>
    <org.jeasy.version>5.0.0</org.jeasy.version>
  </properties>

  <dependencies>
    <!-- SPRINGBOOT -->
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
      <version>${org.postgresql.version}</version>
    </dependency>

    <!-- JWT -->
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>${org.jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${org.jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-jackson</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${org.jjwt.version}</version>
    </dependency>

    <!-- LOMBOK -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
      <scope>provided</scope>
      <version>${org.lombok.version}</version>
    </dependency>

    <!-- MAPSTRUCT -->
    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>

    <!-- APACHE COMMONS -->
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>${org.commons-lang3.version}</version>
    </dependency>

    <!-- SWAGGER -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>${org.springdoc.version}</version>
    </dependency>

    <!-- TEST -->
    <!-- TEST -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <version>${org.springframework.security.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${org.json.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jeasy</groupId>
      <artifactId>easy-random-core</artifactId>
      <version>${org.jeasy.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${org.lombok.version}</version>
            </path>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${org.mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <layout>JAR</layout>
          <mainClass>org.avillar.gymtracker.GymTrackerApplication</mainClass>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>

</project>
